Add cursor pointer style to main sections in styles.css

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 #eleven {
@@ -111,6 +112,7 @@ main {
   justify-content: center;
   background-color: #CECFDA;
   color: black;
+  cursor: pointer;
 }
 
 footer {
